main/bin/main.24692.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/home/leifu/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
In file included from /home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:1:
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/models.h:43:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:9:38: error: restrict requires a pointer or reference ('__global struct Param' is invalid)
__kernel void infect_sweep( __global restrict const struct Param *P,
                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:10:38: error: restrict requires a pointer or reference ('__global struct Cell' is invalid)
                            __global restrict const struct Cell *CellLookup,
                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:11:38: error: restrict requires a pointer or reference ('__global struct Person' is invalid)
                            __global restrict struct Person *Hosts,
                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:12:38: error: restrict requires a pointer or reference ('__global struct Household' is invalid)
                            __global restrict const struct Household *Households,
                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:13:38: error: restrict requires a pointer or reference ('__global struct PersonQuarantine' is invalid)
                            __global restrict const struct PersonQuarantine *HostsQuarantine,
                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:14:38: error: restrict requires a pointer or reference ('__global struct Place' is invalid)
                            __global restrict const struct Place *Places,                            
                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:15:38: error: restrict requires a pointer or reference ('__global struct Microcell' is invalid)
                            __global restrict const struct Microcell *Mcells,
                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:16:38: error: restrict requires a pointer or reference ('__global double' is invalid)
                            __global restrict const double *Rands,                            
                                     ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
